--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,23 @@ edition = "2018"
 
 [dependencies]
 nalgebra = "0.21.0"
+typenum = "1.12.0"
+rand = "0.7.3"
+rayon = "1.3.0"
+num-traits = "0.2.11"
+approx = "0.3.2"
+
+[dependencies.simba]
+version = "0.1.2"
+features = ["wide"]
+
+[dev-dependencies]
+criterion = "0.3.2"
+
+[[bench]]
+name = "distance"
+harness = false
+
+[profile.release]
+lto = true
+codegen-units = 1
