--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,33 @@
 [package]
-name = "embeddingdb"
+name = "embedding-db"
 version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+structopt = "0.3.14"
+tonic = "0.2.1"
+prost = "0.6.1"
+tokio = { version = "0.2.21", features = ["macros"] }
+serde = { version = "1.0.110", features = ["derive"] }
+serde_json = "1.0.53"
 nalgebra = "0.21.0"
-typenum = "1.12.0"
 rayon = "1.3.0"
-rand = "0.7.3"
+slog-term = "2.5.0"
+slog-json = "2.3.0"
+typenum = "1.12.0"
+num_enum = "0.5.0"
+thiserror = "1.0.19"
+anyhow = "1.0.31"
 
 [dev-dependencies]
 criterion = "0.3.2"
+rand = "0.7.3"
+
+[build-dependencies]
+tonic-build = "0.2.0"
 
 [[bench]]
 name = "distance"
 harness = false
 
-[profile.release]
-lto = true
-codegen-units = 1
