--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 structopt = "0.3.14"
 tonic = "0.2.1"
 prost = "0.6.1"
-tokio = { version = "0.2.21", features = ["macros"] }
+tokio = { version = "0.2.21", features = ["full"] }
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
 nalgebra = "0.21.0"
@@ -19,6 +19,8 @@ typenum = "1.12.0"
 num_enum = "0.5.0"
 thiserror = "1.0.19"
 anyhow = "1.0.31"
+enum-iterator = "0.6.0"
+crossbeam-channel = "0.4.2"
 
 [dev-dependencies]
 criterion = "0.3.2"
