--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,22 +5,27 @@ authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
 
 [dependencies]
+# GRPC/server dependencies
 structopt = "0.3.14"
 tonic = "0.2.1"
 prost = "0.6.1"
 tokio = { version = "0.2.21", features = ["full"] }
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
+crossbeam-channel = "0.4.2"
+num_enum = "0.5.0"
+enum-iterator = "0.6.0"
+
+# Point dependencies
 nalgebra = "0.21.0"
 rayon = "1.3.0"
+typenum = "1.12.0"
+
+# Utilities
 slog-term = "2.5.0"
 slog-json = "2.3.0"
-typenum = "1.12.0"
-num_enum = "0.5.0"
-thiserror = "1.0.19"
 anyhow = "1.0.31"
-enum-iterator = "0.6.0"
-crossbeam-channel = "0.4.2"
+thiserror = "1.0.19"
 
 [dev-dependencies]
 criterion = "0.3.2"
