--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0.53"
 crossbeam-channel = "0.4.2"
 num_enum = "0.5.0"
 enum-iterator = "0.6.0"
+dashmap = "3.11.2"
 
 # Point dependencies
 nalgebra = "0.21.0"
@@ -26,6 +27,7 @@ slog-term = "2.5.0"
 slog-json = "2.3.0"
 anyhow = "1.0.31"
 thiserror = "1.0.19"
+rand = "0.7.3"
 
 [dev-dependencies]
 criterion = "0.3.2"
