--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ prost = "0.6.1"
 tokio = { version = "0.2.21", features = ["full"] }
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0.53"
-crossbeam-channel = "0.4.2"
 num_enum = "0.5.0"
 enum-iterator = "0.6.0"
 dashmap = "3.11.2"
@@ -23,11 +22,13 @@ rayon = "1.3.0"
 typenum = "1.12.0"
 
 # Utilities
-slog-term = "2.5.0"
+slog-term = "2.6.0"
 slog-json = "2.3.0"
 anyhow = "1.0.31"
 thiserror = "1.0.19"
 rand = "0.7.3"
+crossbeam-channel = "0.4.2"
+itertools = "0.9.0"
 
 [dev-dependencies]
 criterion = "0.3.2"
