--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ dashmap = "3.11.4"
 nalgebra = "0.21.1"
 rayon = "1.3.0"
 typenum = "1.12.0"
+simba = { version = "0.1.5", features = ["wide"] }
 
 # Utilities
 slog-term = "2.6.0"
@@ -32,6 +33,7 @@ futures = "0.3.5"
 human_format = "1.0.3"
 streaming-stats = "0.2.3"
 num_cpus = "1.13.0"
+bytemuck = "1.2.0"
 
 [dev-dependencies]
 criterion = "0.3.2"
