--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,50 +1,11 @@
-[package]
-name = "proximity-db"
-version = "0.1.0"
-authors = ["Tom Forbes <tom@tomforb.es>"]
-edition = "2018"
+[workspace]
 
-[dependencies]
-# GRPC/server dependencies
-structopt = "0.3.14"
-tonic = "0.2.1"
-prost = "0.6.1"
-tokio = { version = "0.2.21", features = ["full"] }
-serde = { version = "1.0.111", features = ["derive"] }
-serde_json = "1.0.55"
-num_enum = "0.5.0"
-enum-iterator = "0.6.0"
-dashmap = "3.11.4"
-
-# Point dependencies
-nalgebra = "0.21.1"
-rayon = "1.3.0"
-typenum = "1.12.0"
-simba = { version = "0.1.5", features = ["wide"] }
-
-# Utilities
-slog-term = "2.6.0"
-slog-json = "2.3.0"
-anyhow = "1.0.31"
-thiserror = "1.0.19"
-rand = "0.7.3"
-crossbeam-channel = "0.4.2"
-futures = "0.3.5"
-human_format = "1.0.3"
-streaming-stats = "0.2.3"
-num_cpus = "1.13.0"
-bytemuck = "1.2.0"
-
-[dev-dependencies]
-criterion = "0.3.2"
-rand = "0.7.3"
-
-[build-dependencies]
-tonic-build = "0.2.0"
-
-[[bench]]
-name = "distance"
-harness = false
+members = [
+    "proximity",
+    "proximity-server",
+    "proximity-grpc",
+    "proximity-cli",
+]
 
 [profile.bench]
 lto = true
