--- a/proximity/Cargo.toml
+++ b/proximity/Cargo.toml
@@ -4,12 +4,20 @@ version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
 
+
+[features]
+default = ["simd"]
+simd = ["nalgebra", "crossbeam-channel", "rayon", "simba", "bytemuck"]
+
 [dependencies]
-crossbeam-channel = "0.4.2"
-nalgebra = "0.21.1"
-rayon = "1.3.0"
-simba = { version = "0.1.5", features = ["wide"] }
-bytemuck = "1.2.0"
+generic-array = "0.14.2"
+typenum = "1.12.0"
+
+crossbeam-channel = { version = "0.4.2", optional = true }
+nalgebra = { version = "0.21.1", optional = true }
+rayon = { version = "1.3.0", optional = true }
+simba = { version = "0.1.5", features = ["wide"], optional=true }
+bytemuck = { version="1.2.0", optional=true }
 
 [dev-dependencies]
 criterion = "0.3.2"
