--- a/proximity-grpc/Cargo.toml
+++ b/proximity-grpc/Cargo.toml
@@ -3,6 +3,8 @@ name = "proximity-grpc"
 version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
+description = "ProximityDB GRPC bindings"
+license = "GPLv3"
 
 [dependencies]
 tonic = "0.2.1"
