--- a/proximity-cli/Cargo.toml
+++ b/proximity-cli/Cargo.toml
@@ -3,6 +3,8 @@ name = "proximity-cli"
 version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
+description = "CLI to interact with the Proximity DB"
+license = "GPLv3"
 
 [dependencies]
 # Point dependencies
