--- a/proximity-db/Cargo.toml
+++ b/proximity-db/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
 
 [dependencies]
-# GRPC/proximity-server dependencies
+# GRPC/proximity-db dependencies
 structopt = "0.3.14"
 tonic = "0.2.1"
 tokio = { version = "0.2.21", features = ["full"] }
