--- a/proximity/Cargo.toml
+++ b/proximity/Cargo.toml
@@ -3,7 +3,8 @@ name = "proximity"
 version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
-
+description = "Nearest neighbour search with pluggable backends"
+license = "GPLv3"
 
 [features]
 default = ["simd"]
@@ -11,7 +12,6 @@ simd = ["nalgebra", "crossbeam-channel", "rayon", "simba", "bytemuck"]
 
 [dependencies]
 generic-array = "0.14.2"
-typenum = "1.12.0"
 
 crossbeam-channel = { version = "0.4.2", optional = true }
 nalgebra = { version = "0.21.1", optional = true }
@@ -20,6 +20,7 @@ simba = { version = "0.1.5", features = ["wide"], optional=true }
 bytemuck = { version="1.2.0", optional=true }
 
 [dev-dependencies]
+typenum = "1.12.0"
 criterion = "0.3.2"
 rand = "0.7.3"
 
