--- a/proximity-db/Cargo.toml
+++ b/proximity-db/Cargo.toml
@@ -3,6 +3,8 @@ name = "proximity-db"
 version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
+description = "Nearest Neighbour Database"
+license = "GPL-3.0"
 
 [dependencies]
 # GRPC/proximity-db dependencies
