--- a/proximity/Cargo.toml
+++ b/proximity/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
 description = "Nearest neighbour search with pluggable backends"
-license = "GPLv3"
+license = " GPL-3.0"
 
 [features]
 default = ["simd"]
