--- a/proximity-db/Cargo.toml
+++ b/proximity-db/Cargo.toml
@@ -14,6 +14,9 @@ enum-iterator = "0.6.0"
 dashmap = "3.11.4"
 anyhow = "1.0.31"
 thiserror = "1.0.19"
+structopt = "0.3.14"
+num_cpus = "1.13.0"
+rayon = "1.3.0"
 
 proximity-grpc = { path = "../proximity-grpc", version = "0.1.1" }
 proximity = { path = "../proximity", version = "0.1.1" }
