--- a/proximity/Cargo.toml
+++ b/proximity/Cargo.toml
@@ -8,15 +8,16 @@ license = " GPL-3.0"
 
 [features]
 default = ["simd"]
-simd = ["nalgebra", "crossbeam-channel", "rayon", "simba", "bytemuck"]
+simd = ["nalgebra", "crossbeam-channel", "simba", "bytemuck"]
 
 [dependencies]
 generic-array = "0.14.2"
 typenum = "1.12.0"
+rayon = "1.3.0"
 
 crossbeam-channel = { version = "0.4.2", optional = true }
 nalgebra = { version = "0.21.1", optional = true }
-rayon = { version = "1.3.0", optional = true }
+
 simba = { version = "0.1.5", features = ["wide"], optional = true }
 bytemuck = { version = "1.2.0", optional = true }
 
